# Desktop-MCP-Inspector

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  CONTRIBUTING.md  README.md  SECURITY.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build-test.yml  release.yml
cmake/: CompilerWarnings.cmake  ProjectOptions.cmake  Testing.cmake
docs/: code-style.md  development-setup.md  license-audit.md  packaging.md  readme-localization-policy.md  roadmap.md  sample-mcp-server.md  stdio-command-args-quoting.md  transport-connection-api.md
docs/assets/screenshots/: README.md
docs/release/: v0.1.0-checklist.md
examples/mcp-servers/: stdio-echo-server.py
examples/profiles/: dangerous-security-profile.json  japan-healthcare-mcp.local.mcp.json  mvp-demo.json  python-stdio-echo.mcp.json
examples/servers/: mvp_demo_server.py
plan/: 00_overview.md  01_architecture.md  02_phase_plan.md  07_task_list.md  t-07-status.md  t-08-status.md
scripts/: package-linux-appimage.sh
src/: README.md
src/app/: AppSettings.cpp  AppSettings.hpp  MainWindow.cpp  MainWindow.hpp  main.cpp  resources.qrc
src/compare/: ServerDiff.cpp  ServerDiff.hpp  ServerSnapshot.hpp
src/config/: McpJson.cpp  McpJson.hpp  ProfileDiff.cpp  ProfileDiff.hpp  ProfileStore.cpp  ProfileStore.hpp  ProfileValidation.cpp  ProfileValidation.hpp  ServerProfile.hpp
src/mcp/: McpCapabilities.cpp  McpCapabilities.hpp  McpClient.cpp  McpClient.hpp  McpError.cpp  McpError.hpp  McpInitialize.cpp  McpInitialize.hpp  McpMessage.cpp  McpMessage.hpp  McpNotification.cpp  McpNotification.hpp  McpPrompt.cpp  McpPrompt.hpp  McpResource.cpp  McpResource.hpp  McpTool.cpp  McpTool.hpp  McpTypes.cpp  McpTypes.hpp
src/recorder/: RecorderAssertions.cpp  RecorderReplay.hpp  RecorderTestCase.cpp  ReplayRunner.cpp  TestCaseStore.cpp
src/report/: DiffMarkdownWriter.cpp  DiffMarkdownWriter.hpp  HTMLReportWriter.cpp  HTMLReportWriter.hpp  MarkdownReportWriter.cpp  MarkdownReportWriter.hpp  ReportModel.cpp  ReportModel.hpp
src/security/: RiskFinding.cpp  RiskFinding.hpp  RuleEngine.cpp  RuleEngine.hpp  SecurityRules.cpp  SecurityRules.hpp  SecurityScanner.cpp  SecurityScanner.hpp
src/timeline/: McpNotificationTimelineEvent.cpp  McpNotificationTimelineEvent.hpp  StderrTimelineEvent.cpp  StderrTimelineEvent.hpp  TimelineDuration.cpp  TimelineDuration.hpp  TimelineEvent.cpp  TimelineEvent.hpp  TimelineFilterProxyModel.cpp  TimelineFilterProxyModel.hpp  TimelineJsonExporter.cpp  TimelineJsonExporter.hpp  TimelineModel.cpp  TimelineModel.hpp  TimelineStore.cpp  TimelineStore.hpp
src/transport/: HttpSseParser.cpp  HttpSseParser.hpp  StdioJsonLineParser.cpp  StdioJsonLineParser.hpp  StdioLaunchSpec.cpp  StdioLaunchSpec.hpp  StdioLogBuffer.cpp  StdioLogBuffer.hpp  StdioProcessError.cpp  StdioProcessError.hpp  StdioProtocolViolation.cpp  StdioProtocolViolation.hpp  StdioTransport.cpp  StdioTransport.hpp  StreamableHttpTransport.cpp  StreamableHttpTransport.hpp  Transport.cpp  Transport.hpp  TransportConnection.cpp  TransportConnection.hpp
src/ui/: ComparePanel.cpp  ComparePanel.hpp  JsonDetailViewer.cpp  JsonDetailViewer.hpp  ProfileEditor.cpp  ProfileEditor.hpp  PromptPanel.cpp  PromptPanel.hpp  RecorderPanel.cpp  RecorderPanel.hpp  ResourcePanel.cpp  ResourcePanel.hpp  SecurityPanel.cpp  SecurityPanel.hpp  TimelinePanel.cpp  TimelinePanel.hpp  ToolPanel.cpp  ToolPanel.hpp
tests/: CMakeLists.txt  app_settings_test.cpp  mcp_capabilities_test.cpp  mcp_client_pending_test.cpp  mcp_core_flow_test.cpp  mcp_error_mapper_test.cpp  mcp_initialize_test.cpp  mcp_initialized_notification_test.cpp  mcp_message_parse_test.cpp  mcp_message_types_test.cpp  mcp_notification_test.cpp  mcp_prompt_test.cpp  mcp_protocol_info_test.cpp  mcp_request_lifecycle_test.cpp  mcp_resource_test.cpp  mcp_tool_test.cpp  profile_store_test.cpp  profile_validation_test.cpp  security_rules_test.cpp  smoke_test.cpp  stdio_json_line_parser_test.cpp  stdio_launch_spec_test.cpp  stdio_log_buffer_test.cpp  stdio_process_error_test.cpp  stdio_protocol_violation_test.cpp  stdio_transport_integration_test.cpp  stdio_transport_test.cpp  streamable_http_transport_test.cpp  timeline_model_test.cpp  transport_connection_test.cpp  transport_interface_test.cpp
tests/compare/: ServerDiffTest.cpp
tests/config/: McpJsonProfileDiffTest.cpp
tests/fixtures/: stdio_mock_server.cpp
tests/report/: ReportWriterSnapshotTest.cpp
tests/security/: SecurityScannerTest.cpp
